k8s/spring/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  spring-deployment
  namespace: default
  labels:
    app: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name:  spring
        image:  ghcr.io/kevinstana/devops-backend:latest
        livenessProbe:
          httpGet:
            path: "/api/actuator/health/liveness"
            port: 9090
          failureThreshold: 20
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
            httpGet:
              path: "/api/actuator/health/readiness"
              port: 9090
            failureThreshold: 10
            periodSeconds: 10
            initialDelaySeconds: 30
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort:  9090
          name:  spring
      # imagePullSecrets:
      # - name: registry-credentials
