k8s/spring/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
  - host: "spring-devops.zapto.org"
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: spring
            port:
              name: spring
